5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4370/executions/1633_2943.log
== TEST (2019-04-02 18:11:21) 
-- CODE:
print(round(2*pi**2*R*r**2*Q, 4))
input("massa")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(2*pi**2*R*r**2*Q, 4))
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:11:48) 
-- CODE:
print(round(2*math**2*R*r**2*Q, 4))
input("massa")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(2*math**2*R*r**2*Q, 4))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:12:33) 
-- CODE:
print(round(2*math(pi)**2*R*r**2*Q, 4))
input("massa")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(2*math(pi)**2*R*r**2*Q, 4))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:17:26) 
-- CODE:
print(round(2*math(pi)**2*R*r**2*q, 4))
input("massa")
R= distancia
r= raio
q= quantidade 
input()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(2*math(pi)**2*R*r**2*q, 4))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:20:48) 
-- CODE:
from math import *
print(round(2*pi**2*R*r**2*q, 4))
input("massa")
R= ("distancia")
r= ("raio")
q= ("quantidade")
input()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(2*pi**2*R*r**2*q, 4))
NameError: name 'R' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:21:49) 
-- CODE:
from math import *
print(round(2*pi**2*R*r**2*q, 2))
input("massa")
R= ("distancia")
r= ("raio")
q= ("quantidade")
input()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(2*pi**2*R*r**2*q, 2))
NameError: name 'R' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:22:28) 
-- CODE:
from math import *
print(round(2*pi**2*R*r**2*q, 2))

R= ("distancia")
r= ("raio")
q= ("quantidade")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(2*pi**2*R*r**2*q, 2))
NameError: name 'R' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:28:57) 
-- CODE:
from math import *
R= input("distancia")
r= input("raio")
q= input("quantidade")
m= input("massa")
print(round

-- ERROR:
File "XXXX", line 7
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:30:19) 
-- CODE:
from math import *
R= input("distancia")
r= input("raio")
q= input("quantidade")
m= input("massa")
print(round(m, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    m= input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:30:25) 
-- CODE:
from math import *
R= input("distancia")
r= input("raio")
q= input("quantidade")
m= input("massa")
print(round(m, 2))

-- EXECUTION TIME:
0.183203
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2943/main.py", line 5, in <module>
    m= input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:30:45) 
-- CODE:
from math import *
R= input("distancia")
r= input("raio")
q= input("quantidade")
m= input("massa")
print(round(m, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    m= input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:32:38) 
-- CODE:
from math import *pi
R= input("distancia")
r= input("raio")
q= input("quantidade")
m= input("massa")
print(round(m, 2))

-- EXECUTION TIME:
0.170063
-- ERROR:
  File "/home/codebench/codes/1633/2943/main.py", line 1
    from math import *pi
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:32:40) 
-- CODE:
from math import *pi
R= input("distancia")
r= input("raio")
q= input("quantidade")
m= input("massa")
print(round(m, 2))

-- ERROR:
File "XXXX", line 1
    from math import *pi
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:33:08) 
-- CODE:
from math import *
R= input("distancia")
r= input("raio")
q= input("quantidade")
m= input("massa")
print(round(m, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    m= input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:33:15) 
-- CODE:
from math import *
R= input("distancia")
r= input("raio")
q= input("quantidade")
m= input("massa")
print(round(m, 2))

-- EXECUTION TIME:
0.154525
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2943/main.py", line 5, in <module>
    m= input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:36:13) 
-- CODE:
from math import *
R= input("distancia")
r= input("raio")
q= input("quantidade")
m= input(2*pi**2*R*r**q)
print(round(m, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    m= input(2*pi**2*R*r**q)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:36:17) 
-- CODE:
from math import *
R= input("distancia")
r= input("raio")
q= input("quantidade")
m= input(2*pi**2*R*r**q)
print(round(m, 2))

-- EXECUTION TIME:
0.201665
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2943/main.py", line 5, in <module>
    m= input(2*pi**2*R*r**q)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:37:08) 
-- CODE:
from math import *
R= input("distancia")
r= input("raio")
q= input("quantidade")
m= input(2*pi**2*R*r**2*q)
print(round(m, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    m= input(2*pi**2*R*r**2*q)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:37:11) 
-- CODE:
from math import *
R= input("distancia")
r= input("raio")
q= input("quantidade")
m= input(2*pi**2*R*r**2*q)
print(round(m, 2))

-- EXECUTION TIME:
0.127254
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2943/main.py", line 5, in <module>
    m= input(2*pi**2*R*r**2*q)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:37:15) 
-- CODE:
from math import *
R= input("distancia")
r= input("raio")
q= input("quantidade")
m= input(2*pi**2*R*r**2*q)
print(round(m, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    m= input(2*pi**2*R*r**2*q)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:38:13) 
-- CODE:
from math import *
R= input("distancia")
r= input("raio")
q= input("quantidade")
m= float(int(2*pi**2*R*r**2*q)
print(round(m, 2))

-- ERROR:
File "XXXX", line 6
    print(round(m, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:38:29) 
-- CODE:
from math import *
R= input("distancia")
r= input("raio")
q= input("quantidade")
m= float(int(2*pi**2*R*r**2*q)
print(round(m, 2))

-- ERROR:
File "XXXX", line 6
    print(round(m, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:39:02) 
-- CODE:
from math import *
R= input("distancia")
r= input("raio")
q= input("quantidade")
m= float(input(2*pi**2*R*r**2*q)
print(round(m, 2))

-- ERROR:
File "XXXX", line 6
    print(round(m, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:41:48) 
-- CODE:
from math import *
R= input("distancia")
r= input("raio")
q= input("quantidade")
m= float(input(2*pi**2*R*r**2*q)
print(round(m, 2))

-- ERROR:
File "XXXX", line 6
    print(round(m, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:44:03) 
-- CODE:
from math import *
R= input("distancia")
r= input("raio")
q= input("quantidade")
m= float(input(2*pi**2*R*r**2*q)
print=(round(m, 2))

-- ERROR:
File "XXXX", line 6
    print=(round(m, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:44:19) 
-- CODE:
from math import *
R= input("distancia")
r= input("raio")
q= input("quantidade")
m= float(input(2*pi**2*R*r**2*q)
print(round(m, 2))

-- ERROR:
File "XXXX", line 6
    print(round(m, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:45:26) 
-- CODE:
from math import *
R= input("distancia")
r= input("raio")
q= input("quantidade")
m= float(2*pi**2*R*r**2*q)
print(round(m, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    m= float(2*pi**2*R*r**2*q)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:45:30) 
-- CODE:
from math import *
R= input("distancia")
r= input("raio")
q= input("quantidade")
m= float(2*pi**2*R*r**2*q)
print(round(m, 2))

-- EXECUTION TIME:
0.296216
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2943/main.py", line 5, in <module>
    m= float(2*pi**2*R*r**2*q)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:46:10) 
-- CODE:
from math import *
R= input("distancia")
r= input("raio")
q= input("quantidade")
m= float(int(2*pi**2*R*r**2*q)
print(round(m, 2))

-- ERROR:
File "XXXX", line 6
    print(round(m, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:46:38) 
-- CODE:
from math import *
R= input("distancia")
r= input("raio")
q= input("quantidade")
m= int(float(2*pi**2*R*r**2*q)
print(round(m, 2))

-- ERROR:
File "XXXX", line 6
    print(round(m, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:47:23) 
-- CODE:
from math import *
R= input("distancia")
r= input("raio")
q= input("quantidade")
m= int(float(2*pi**2*R*r**2*q))
print(round(m, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    m= int(float(2*pi**2*R*r**2*q))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:48:34) 
-- CODE:
from math import *
R= float(input("distancia")
r= float(input("raio")
q= float(input("quantidade")
m= (2*pi**2*R*r**2*q))
print(round(m, 2))

-- ERROR:
File "XXXX", line 3
    r= float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:49:04) 
-- CODE:
from math import *
R= float(input("distancia")
r= float(input("raio")
q= float(input("quantidade")
m= 2*pi**2*R*r**2*q
print(round(m, 2))

-- ERROR:
File "XXXX", line 3
    r= float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:49:46) 
-- CODE:
from math import *
R= float(input("distancia")
r= float(input("raio")
q= float(input("quantidade")
m= 2*pi**2*R*r**2*q
print(round(m, 2))

-- EXECUTION TIME:
0.203252
-- ERROR:
  File "/home/codebench/codes/1633/2943/main.py", line 3
    r= float(input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:49:50) 
-- CODE:
from math import *
R= float(input("distancia")
r= float(input("raio")
q= float(input("quantidade")
m= 2*pi**2*R*r**2*q
print(round(m, 2))

-- ERROR:
File "XXXX", line 3
    r= float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:50:17) 
-- CODE:
from math import *
R= float(input("distancia"))
r= float(input("raio"))
q= float(input("quantidade"))
m= 2*pi**2*R*r**2*q
print(round(m, 2))

-- OUTPUT:
103630.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:50:20) 
-- CODE:
from math import *
R= float(input("distancia"))
r= float(input("raio"))
q= float(input("quantidade"))
m= 2*pi**2*R*r**2*q
print(round(m, 2))

-- EXECUTION TIME:
0.109491
-- TEST CASE 1:
---- input:
8.4
2.5
100
---- correct output:
103630.85
---- user output:
103630.85
-- TEST CASE 2:
---- input:
14.1
3.8
5
---- correct output:
20094.91
---- user output:
20094.91
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
